--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,26 +1,31 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="dark">
-    <ion-title>
-      Leitor
+    <ion-title style="text-align: center;">
+      QRScanner
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-
-
 <ion-content [fullscreen]="true" color="medium">
-
 </ion-content>
-
 <div class="screen">
-  <div class="scan">
-    <img id="logo" src="assets/logo.jpg" alt="">
-  </div>
+<div class="scan">
+  <img id="logo" src="assets/icon.png" alt="">
 </div>
-
+</div>
 <ion-footer class="ion-no-border">
-  <ion-toolbar color="dark">
-    <ion-button (click)="lerQRCode()" expand="block" 
-color="danger">LER QRCODE</ion-button>
-  </ion-toolbar>
+<ion-item *ngIf="link">
+  <ion-label>
+    <div>
+      <a [href]="resultado" target="_blank">{{resultado}}</a>
+    </div>
+  </ion-label>
+</ion-item>
+<ion-item *ngIf="resultado">
+  <ion-label position="floating">Resultado</ion-label>
+  <ion-input [(ngModel)]="resultado"></ion-input>
+</ion-item>
+<ion-toolbar color="dark">
+  <ion-button expand="block" (click)="lerQRCode()" color="danger">LER QRCODE</ion-button>     
+</ion-toolbar>
 </ion-footer>
