--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,6 +10,7 @@
       <ion-icon name="file-tray-stacked"></ion-icon>
       <ion-label>Histórico</ion-label>
     </ion-tab-button>
+  </ion-tab-bar>
 
 
 </ion-tabs>
